--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
               <a href="#" class="nav-link px-2 text-white">내가 찜함 콘텐츠</a>
             </li>
             <li>
+              <a href="./member/hyojung.html" class="nav-link px-2 text-white">김효중</a>
+            </li>
+            <li>
               <a href="#" class="nav-link px-2 text-white">현재 서울의 날씨 : <span id="msg"></span>도</a>
             </li>
           </ul>
